--- a/ai-animator/backend/package.json
+++ b/ai-animator/backend/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "execa": "^8.0.1",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "firebase": "^12.0.0",
+    "firebase-admin": "^13.4.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
