--- a/ai-animator/backend/Dockerfile
+++ b/ai-animator/backend/Dockerfile
@@ -5,7 +5,7 @@ FROM node:18-slim
 WORKDIR /usr/src/app
 
 # Install system dependencies needed for Python, Manim, and FFMPEG
-# NEW: Added pkg-config and libcairo2-dev for pycairo dependency
+# NEW: Added libpango1.0-dev for manimpango dependency
 RUN apt-get update && apt-get install -y \
     python3 \
     python3-pip \
@@ -13,6 +13,7 @@ RUN apt-get update && apt-get install -y \
     texlive-full \
     pkg-config \
     libcairo2-dev \
+    libpango1.0-dev \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Manim using pip, adding the --break-system-packages flag to both commands
